# ballistic-sim

./: .gitignore  AGENT_STATE.md  CHANGELOG.md  LICENSE  PLAN_P1_v0.5.0.md  PLAN_v0.4.0.md  README.md  RELEASE_NOTES_v0.3.1.md  ROADMAP.md  launch_gui.bat  launch_gui.py  pyproject.toml  regression_report.md  方案设计.md
.github/workflows/: benchmark.yml  ci.yml
ballistic_sim/: __init__.py  __main__.py  cli.py  config.py  constants.py  context.py  frames.py  monte_carlo.py  simulator.py  state_switch.py
ballistic_sim/api/: __init__.py  __main__.py  dependencies.py  main.py  models.py
ballistic_sim/dynamics/: __init__.py  batch_mpm.py  common.py  gpu_mpm.py  mpm.py  point_mass.py  powered_eci.py  six_dof.py
ballistic_sim/gui/: __init__.py  __main__.py  app.py  builder.py  fields.py  runner.py
ballistic_sim/guidance/: __init__.py  aag.py  circularization.py  control.py  energy_management.py  firecontrol.py  open_loop.py  peg.py  proportional_navigation.py  reentry_guidance.py  targeting.py
ballistic_sim/models/: __init__.py  aerodynamics.py  atmosphere.py  gravity.py  propulsion.py  terrain.py  wind.py
ballistic_sim/phases/: __init__.py  base.py  builder.py  coasting.py  events.py  powered.py  reentry.py  terminal.py
ballistic_sim/presets/: __init__.py  loader.py  missiles.py  projectiles.py  rockets.py
ballistic_sim/utils/: __init__.py  optional_imports.py
ballistic_sim/viz/: __init__.py  animation.py  dashboard.py  dvbudget.py  earth.py  globe3d.py  groundtrack.py  interactive3d.py  monte_carlo.py  orbit_insertion.py  profile.py  reentry.py  trajectory3d.py  wind_plot.py
configs/: sample_icbm.yaml
docs/: architecture.md  guidance_laws.md  known_failures.md  migration_scope.md  performance.md  user_guide.md  v0.3.0_plan.md
presets/: missiles.yaml  projectiles.yaml  rockets.yaml
scripts/: benchmark.py  comparison_demo.py  gen_golden.py  monte_carlo_demo.py  mvp_demo.py  regression_bridge.py  release_check.py  stage2_2_validation.py  stage2_2_validation_report.txt
tests/: conftest.py  stage1_report.txt  stage2_report.txt  stage3_report.txt  stage4_report.txt  test_api.py  test_async_api.py  test_benchmark.py  test_cache.py  test_cli.py  test_cli_wind_terrain.py  test_config_io.py  test_config_validation.py  test_config_validation_integration.py  test_context.py  test_dynamics_point_mass.py  test_frames.py  test_gui.py  test_icbm.py  test_import_guards.py  test_mission_presets_end_to_end.py  test_monte_carlo.py  test_mvp.py  test_performance.py  test_public_api.py  test_release_check.py  test_simulate_phases_deprecation.py  test_simulator.py  test_sixdof_reentry_builder.py  test_sixdof_vs_mpm.py  test_state_switch.py  test_state_switch_reentry.py  test_terrain_integration.py  test_vehicle_config_defaults.py  test_version.py  test_wind_terrain_boundary.py
tests/dynamics/: test_batch_mpm.py  test_mpm_extra.py  test_point_mass.py  test_powered_eci_extra.py  test_six_dof.py  test_six_dof_control.py  test_six_dof_known_failures.py  test_six_dof_quaternion.py  test_six_dof_smoke.py
tests/golden/: atmospheric_m107.json  exo_cz2f.json  point_mass_rhs_baseline.json
tests/gui/: test_gui_3d.py  test_gui_app_roundtrip.py  test_gui_fields_roundtrip.py
tests/guidance/: __init__.py  test_aag.py  test_circularization.py  test_control.py  test_energy_management.py  test_firecontrol.py  test_firecontrol_extra.py  test_open_loop.py  test_open_loop_extra.py  test_peg.py  test_peg_extra.py  test_proportional_navigation.py  test_reentry_guidance.py  test_reentry_guidance_extra.py  test_targeting.py
tests/models/: test_aerodynamics.py  test_aerodynamics_extra.py  test_atmosphere.py  test_atmosphere_extra.py  test_atmosphere_extra2.py  test_gravity.py  test_gravity_extra.py  test_terrain.py  test_terrain_extra.py  test_wind.py  test_wind_extra.py
tests/phases/: test_builder_advanced.py  test_builder_projectile.py  test_events.py  test_events_extra.py  test_events_terrain.py  test_terminal.py
tests/presets/: test_loader_extra.py  test_missile_full_chain.py  test_presets.py  test_rocket_full_chain.py
tests/viz/: __init__.py  test_animation.py  test_dashboard.py  test_dvbudget.py  test_earth.py  test_interactive3d.py  test_monte_carlo_plot.py  test_viz_smoke.py
web/: index.html
