[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ballistic-sim"
version = "0.6.0"
description = "Six-degree-of-freedom (6-DOF) ballistic flight simulation with modular phases, guidance, and visualization."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "bowlbowlhe-svg" },
]
keywords = ["ballistics", "6-dof", "flight-dynamics", "rocket", "missile", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
weather = [
    "requests>=2.28",
    "netCDF4>=1.6",
    "cfgrib>=0.9",
    "xarray>=2023.0",
]
terrain = ["rasterio>=1.3", "shapely>=2.0"]
srtm = ["srtm.py>=0.3"]
gpu = ["cupy>=13.0"]  # 安装时按本机 CUDA 版本选择对应 wheel，如 cupy-cuda11x / cupy-cuda12x
web = ["fastapi>=0.100", "uvicorn[standard]>=0.23", "httpx>=0.24"]
anim = ["matplotlib>=3.7", "Pillow>=10.0"]
viz3d = ["plotly>=5.0", "kaleido>=0.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
all = [
    "requests>=2.28",
    "netCDF4>=1.6",
    "cfgrib>=0.9",
    "xarray>=2023.0",
    "rasterio>=1.3",
    "shapely>=2.0",
    "srtm.py>=0.3",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
    "Pillow>=10.0",
    "plotly>=5.0",
    "kaleido>=0.2",
]

[project.scripts]
ballistic-sim = "ballistic_sim.cli:main"

[project.urls]
Homepage = "https://github.com/bowlbowlhe-svg/ballistic-sim"
Repository = "https://github.com/bowlbowlhe-svg/ballistic-sim"
Issues = "https://github.com/bowlbowlhe-svg/ballistic-sim/issues"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["scipy.*", "scipy.interpolate"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ballistic_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v -n auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "golden: tests that compare against golden reference files",
    "divergence: tests for known 6-DOF divergence conditions",
]

[tool.coverage.run]
source = ["ballistic_sim"]
branch = true
omit = [
    "tests/*",
    "scripts/*",
    "*/__main__.py",
]

# Coverage quality gates:
# - Core physics modules (dynamics, models, guidance) should maintain >= 90%.
# - The overall package must maintain >= 80%.
# The global fail_under below enforces the overall gate; per-module core gates
# should be checked in CI via ``coverage report --include="ballistic_sim/dynamics/*"``
# etc., or by reviewing the HTML report.
[tool.coverage.report]
# Stage 5 目标：整体覆盖 ≥80%，核心物理模块（dynamics/models/guidance）≥90%。
# 当前测试套件已达成整体 ≥85%，将全局阈值固定为 80。
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
